# misc-ovirt

./: cpuClusterCheck.py  create_vdsm_changelog_wiki.py  engine-db-tool.py  engine_force_remove_Host.py  forceVMstart.py  force_remove_Host.py  import-engine-dump.sh  register_node.py  rhev_force_remove_Host.py  rhevm-db-tool.py
ansible/: README  kickstart-autoinstall-ovirt-node-ng.ks  register-hosts.yml  vars.yml
ovirt-db-lib/: Makefile.am  README.md  configure.ac  ovirt-db-lib.spec.in
ovirt-db-lib/examples/: cluster_check_for_datacenters.py  show_vms_names.py
ovirt-db-lib/src/ovirt_db_lib/: Makefile.am  __init__.py
ovirt-db-lib/src/ovirt_db_lib/pgsql/: __init__.py
ovirt-db-lib/src/sqls/pre-upgrade-sqls/: Makefile.am  cleanup.sql
ovirt-db-lib/src/sqls/pre-upgrade-sqls/cluster/: cluster_query_check_datacenter.sql
ovirt-db-lib/src/sqls/pre-upgrade-sqls/engine/: engine_versions_through_all_upgrades.sql
ovirt-db-lib/src/sqls/pre-upgrade-sqls/hosts/: hosts_query_check_health.sql
ovirt-db-lib/src/sqls/pre-upgrade-sqls/network/: networks_table_not_using_network_attachments.sql  networks_table_using_network_attachments.sql
ovirt-db-lib/src/sqls/pre-upgrade-sqls/storage/: storage_create_related_lookup_tables.sql
ovirt-db-lib/src/sqls/pre-upgrade-sqls/vms/: vms_create_related_lookup_tables.sql  vms_query_health.sql
ovirt-node/: augeas_remove_entries_in_a_file.py  augeas_set_new_value_for_entry_in_a_file.py  restore-config.py
ovirt-node-legacy/: persist_unpersist_node.py  sed.py
ovirt-qemu-kvm-wrapper/: 50_emulator  README  qemu-kvm-modified
pre-upgrade-tool/: README.md  pre-upgrade-check
readOvf/: example-ovf-ident.xml  example-ovf-rhel56.xml  example-ovf-win2008.xml  readOvf.py
sqls/: README.md  cleanup.sql  cluster_show_all_compabilities_available.sql  hosts_query_check_health.sql  hosts_tables.sql
vdsClientAPI/: getISCSIid.py  getStorageInfo.py
